--- a/python/templates/component_type.py.jinja
+++ b/python/templates/component_type.py.jinja
@@ -1,8 +1,10 @@
 # this file is @generated
 {% if type.kind == "struct" -%}
     {% include "types/struct.py.jinja" -%}
-{%- elif type.kind == "string_enum"-%}
+{% elif type.kind == "string_enum" -%}
     {% include "types/string_enum.py.jinja" -%}
-{%- elif type.kind == "integer_enum" %}
-{%- include "types/integer_enum.py.jinja" -%}
-{%- endif %}
+{% elif type.kind == "integer_enum" -%}
+    {% include "types/integer_enum.py.jinja" -%}
+{% elif type.kind == "struct_enum" -%}
+    {% include "types/struct_enum.py.jinja" -%}
+{% endif %}
