ruby: Clean up template
Co-authored-by: Jonas Platte <jplatte@svix.com>

--- a/ruby/templates/component_type.rb.jinja
+++ b/ruby/templates/component_type.rb.jinja
@@ -2,6 +2,6 @@
     {% include "types/struct.rb.jinja" -%}
 {%- elif type.kind == "string_enum"-%}
     {% include "types/string_enum.rb.jinja" -%}
-{%- elif type.kind == "integer_enum" %}
-{%- include "types/integer_enum.rb.jinja" -%}
+{%- elif type.kind == "integer_enum" -%}
+    {% include "types/integer_enum.rb.jinja" -%}
 {%- endif %}
