--- a/java/templates/component_type.java.jinja
+++ b/java/templates/component_type.java.jinja
@@ -2,6 +2,6 @@
     {% include "types/struct.java.jinja" -%}
 {%- elif type.kind == "string_enum"-%}
     {% include "types/string_enum.java.jinja" -%}
-{%- elif type.kind == "integer_enum" %}
-{%- include "types/integer_enum.java.jinja" -%}
+{%- elif type.kind == "integer_enum" -%}
+    {%- include "types/integer_enum.java.jinja" -%}
 {%- endif %}
