--- a/csharp/templates/component_type.cs.jinja
+++ b/csharp/templates/component_type.cs.jinja
@@ -2,6 +2,6 @@
     {% include "types/struct.cs.jinja" ignore missing -%}
 {%- elif type.kind == "string_enum"-%}
     {% include "types/string_enum.cs.jinja" %}
-{%- elif type.kind == "integer_enum" %}
-{%- include "types/integer_enum.cs.jinja" -%}
+{%- elif type.kind == "integer_enum" -%}
+    {%- include "types/integer_enum.cs.jinja" -%}
 {%- endif %}
