--- a/javascript/templates/component_type.ts.jinja
+++ b/javascript/templates/component_type.ts.jinja
@@ -10,4 +10,6 @@
     {% include "types/string_enum.ts.jinja" -%}
 {% elif type.kind == "integer_enum" -%}
     {% include "types/integer_enum.ts.jinja" -%}
+{% elif type.kind == "struct_enum" -%}
+    {% include "types/struct_enum.ts.jinja" -%}
 {% endif %}
