kotlin: Add support for struct enums

--- a/kotlin/templates/component_type.kt.jinja
+++ b/kotlin/templates/component_type.kt.jinja
@@ -4,4 +4,6 @@
     {% include "types/string_enum.kt.jinja" -%}
 {%- elif type.kind == "integer_enum" -%}
     {%- include "types/integer_enum.kt.jinja" -%}
+{% elif type.kind == "struct_enum" -%}
+    {% include "types/struct_enum.kt.jinja" -%}
 {%- endif %}
