--- a/java/templates/component_type.java.jinja
+++ b/java/templates/component_type.java.jinja
@@ -4,4 +4,6 @@
     {% include "types/string_enum.java.jinja" -%}
 {%- elif type.kind == "integer_enum" -%}
     {%- include "types/integer_enum.java.jinja" -%}
+{% elif type.kind == "struct_enum" -%}
+    {% include "types/struct_enum.java.jinja" -%}
 {%- endif %}
