--- a/csharp/templates/component_type.cs.jinja
+++ b/csharp/templates/component_type.cs.jinja
@@ -4,4 +4,6 @@
     {% include "types/string_enum.cs.jinja" %}
 {%- elif type.kind == "integer_enum" -%}
     {%- include "types/integer_enum.cs.jinja" -%}
+{%- elif type.kind == "struct_enum" -%}
+    {%- include "types/struct_enum.cs.jinja" -%}
 {%- endif %}
