--- a/ruby/templates/component_type.rb.jinja
+++ b/ruby/templates/component_type.rb.jinja
@@ -4,4 +4,6 @@
     {% include "types/string_enum.rb.jinja" -%}
 {%- elif type.kind == "integer_enum" -%}
     {% include "types/integer_enum.rb.jinja" -%}
+{%- elif type.kind == "struct_enum" -%}
+    {% include "types/struct_enum.rb.jinja" -%}
 {%- endif %}
