--- a/javascript/templates/component_type.ts.jinja
+++ b/javascript/templates/component_type.ts.jinja
@@ -1,5 +1,9 @@
 // this file is @generated
 /* eslint @typescript-eslint/no-explicit-any: 0 */
+{% if type.kind == "struct" and type.fields | length == 0 -%}
+/* eslint @typescript-eslint/no-empty-object-type: 0 */
+/* eslint @typescript-eslint/no-unused-vars: 0 */
+{% endif -%}
 {% if type.description is defined -%}
 {% set doc_comment = type.description | to_doc_comment(style="js") -%}
 {% endif -%}
