js: Add hack for `BackgroundTaskFinishedEvent2`

--- a/javascript/templates/types/macros.ts.jinja
+++ b/javascript/templates/types/macros.ts.jinja
@@ -2,11 +2,16 @@
     {%- if type.is_datetime() -%}
         new Date({{ field_expr }})
     {%- elif type.is_schema_ref() -%}
-        {%- if not field_required -%}
-            {{ field_expr }} ? {{ type.to_js() }}Serializer._fromJsonObject({{ field_expr }}): undefined
-        {%- else -%}
-            {{ type.to_js() }}Serializer._fromJsonObject({{ field_expr }})
-        {%- endif %}
+        {# TODO(10055) remove this hack #}
+        {% if type.to_js() == "any" -%}
+            {{ field_expr }}
+        {% else -%}
+            {%- if not field_required -%}
+                {{ field_expr }} ? {{ type.to_js() }}Serializer._fromJsonObject({{ field_expr }}): undefined
+            {%- else -%}
+                {{ type.to_js() }}Serializer._fromJsonObject({{ field_expr }})
+            {%- endif %}
+        {% endif -%}
     {%- elif type.is_list() or type.is_set() -%}
         {{ field_expr }}
         {%- set inner_t = type.inner_type() -%}
@@ -37,11 +42,16 @@
 
 {% macro field_to_json(field_expr, type, field_required) %}
     {%- if type.is_schema_ref() -%}
-        {%- if not field_required -%}
-        {{ field_expr }} ? {{ type.to_js() }}Serializer._toJsonObject({{ field_expr }}) : undefined
-        {%- else -%}
-        {{ type.to_js() }}Serializer._toJsonObject({{ field_expr }})
-        {%- endif -%}
+        {# TODO(10055) remove this hack #}
+        {% if type.to_js() == "any" -%}
+            {{ field_expr }}
+        {% else -%}
+            {%- if not field_required -%}
+            {{ field_expr }} ? {{ type.to_js() }}Serializer._toJsonObject({{ field_expr }}) : undefined
+            {%- else -%}
+            {{ type.to_js() }}Serializer._toJsonObject({{ field_expr }})
+            {%- endif -%}
+        {% endif -%}
     {%- elif type.is_list() or type.is_set() -%}
         {{ field_expr }}
         {%- set inner_t = type.inner_type() -%}
