--- a/openapi-templates/go/component_type.go.jinja
+++ b/openapi-templates/go/component_type.go.jinja
@@ -1,7 +1,9 @@
 {% if type.kind == "struct" -%}
-	{% include "types/struct.go.jinja" ignore missing -%}
+	{% include "types/struct.go.jinja" -%}
 {% elif type.kind == "string_enum" -%}
-	{% include "types/string_enum.go.jinja" ignore missing -%}
+	{% include "types/string_enum.go.jinja" -%}
 {% elif type.kind == "integer_enum" -%}
-	{% include "types/integer_enum.go.jinja" ignore missing -%}
+	{% include "types/integer_enum.go.jinja" -%}
+{% elif type.kind == "struct_enum" -%}
+	{% include "types/struct_enum.go.jinja" -%}
 {% endif -%}
