--- a/openapi-templates/go/api_resource.go.jinja
+++ b/openapi-templates/go/api_resource.go.jinja
@@ -10,19 +10,20 @@ import (
 	"encoding/json"
 
 	"github.com/svix/svix-webhooks/go/models"
+	"github.com/svix/svix-webhooks/go/internal"
 )
 
 
 type {{ resource_type_name }} struct {
 	{% if resource.operations | length > 0 -%}
-	client *SvixHttpClient
+	client *internal.SvixHttpClient
 	{%- endif %}
 	{%- for name, sub in resource.subresources | items %}
 	{{ name | to_upper_camel_case }} *{{ sub.name | to_upper_camel_case }}
 	{%- endfor %}
 }
 
-func new{{ resource_type_name }}(client *SvixHttpClient) *{{ resource_type_name }} {
+func new{{ resource_type_name }}(client *internal.SvixHttpClient) *{{ resource_type_name }} {
 	return &{{ resource_type_name }}{
 		{% if resource.operations | length > 0 -%}
 		client: client,
@@ -128,14 +129,14 @@ func ({{ resource_self_name }} *{{ resource_type_name }}) {{ op.name | to_upper_
 		{# header params -#}
 		{% if op.header_params | length > 0 -%}
 			{% for p in op.header_params -%}
-		serializeParamToMap("{{ p.name }}", o.{{ p.name | to_upper_camel_case }}, headerMap, &err)
+		internal.SerializeParamToMap("{{ p.name }}", o.{{ p.name | to_upper_camel_case }}, headerMap, &err)
 			{% endfor -%}
 		{% endif -%}
 
 		{# query params -#}
 		{% if op.query_params | length >0 -%}
 			{% for p in op.query_params -%}
-		serializeParamToMap("{{ p.name }}", o.{{ p.name | to_upper_camel_case }}, queryMap, &err)
+		internal.SerializeParamToMap("{{ p.name }}", o.{{ p.name | to_upper_camel_case }}, queryMap, &err)
 			{% endfor -%}
 		{% endif -%}
 
@@ -152,7 +153,7 @@ func ({{ resource_self_name }} *{{ resource_type_name }}) {{ op.name | to_upper_
 	{% else -%}
 		{% set generic_ret_type -%}any,{{ ret_type }}{% endset -%}
 	{% endif -%}
-	{% if has_return %}return {% else %} _,err {% if not used_err%}:{% endif%}= {% endif %}executeRequest[{{ generic_ret_type }}](
+	{% if has_return %}return {% else %} _,err {% if not used_err%}:{% endif%}= {% endif %}internal.ExecuteRequest[{{ generic_ret_type }}](
 		ctx,
 		{{ resource_self_name }}.client,
 		"{{ op.method | upper }}",
