go: Add map that can create the enum value from the underlying literal
This also lets me know what are the valid options for the enum. (because I can check the map keys)

--- a/openapi-templates/go/types/integer_enum.go.jinja
+++ b/openapi-templates/go/types/integer_enum.go.jinja
@@ -40,3 +40,9 @@ func (v *{{ ty_name }}) UnmarshalJSON(src []byte) error {
 	return fmt.Errorf("`%+v` is not a valid {{ ty_name }}", value)
 
 }
+
+var {{ ty_name }}FromInt64 = map[int64]{{ ty_name }}{
+	{% for varname, val in type.variants -%}
+	{{ val }} : {{ type.name |  to_upper_snake_case | replace("_", "") }}_{{ varname | to_upper_snake_case }},
+	{% endfor -%}
+}
